Removed old app container from html. Removed xhr and updated fetch to allow text responses. Added the default background color for dark mode on html,body to prevent a white flash. Added an error when a park can not be found

--- a/frontend/scss/style.global.scss
+++ b/frontend/scss/style.global.scss
@@ -1,3 +1,13 @@
+html, body {
+  background-color: rgb(255, 255, 255);
+}
+
+@media (prefers-color-scheme: dark) {
+  html, body {
+    background-color: rgb(17, 24, 39);
+  }
+}
+
 #root {
   height: 100vh;
 
